NWC 1.75 Help File

--- a/DLG_ABOUT.htm
+++ b/DLG_ABOUT.htm
@@ -7,27 +7,17 @@
 <h2><i>NoteWorthy Composer</i>&trade; License and Warranty</h2>
 <hr>
 <p align=center>
-<b><i>NoteWorthy Composer</i></b> Copyright © 1996-2000 by <b><i>NoteWorthy Software, Inc.
+<b><i>NoteWorthy Composer</i></b> Copyright © 1996-2002 by <b><i>NoteWorthy Software, Inc.
 <br>
 </i></b>All Rights Reserved </p>
 <p>
 Your use of this software indicates your acceptance to the terms and conditions as defined in this license agreement and warranty statement. Please carefully read these terms and conditions prior to the use of this software. </p>
 <p>
-<b><u>Unregistered Shareware Version </u></b></p>
-<p>
-The license information in this section applies only to the unregistered version of <i>NoteWorthy Composer</i>. You can confirm whether a running <i>NoteWorthy Composer</i> application is unregistered Shareware by selecting the <a href=MNU_ABOUT.htm>About</a> menu item in the <b>Help</b> menu of <i>NoteWorthy Composer</i>. </p>
-<p>
-<b>Evaluation License: </b><i>NoteWorthy Composer</i> is not a free program. You are hereby granted a limited license to use this version of <i>NoteWorthy Composer</i> for up to 30 days before you are required to purchase a complete license (see <a href=HELP_ONORDERING.htm>Ordering Information</a>). If you elect not to purchase <i>NoteWorthy Composer</i>, you must discontinue the use of it after the evaluation period expires (see <a href=help.hrm#uninstalling>Removing <i>NoteWorthy Composer</i></a>). </p>
-<p>
-<b>Distribution License: </b>You are hereby granted a limited license to distribute the unregistered Shareware version of <i>NoteWorthy Composer</i> provided you comply with the distribution conditions outlines in the VENDOR.TXT file in the <i>NoteWorthy Composer</i> directory. </p>
-<p>
-<b><u>Registered Version </u></b></p>
-<p>
-As a licensed user of <i>NoteWorthy Composer</i>, you are entitled to install <i>NoteWorthy Composer</i> on one machine and enjoy unrestricted use of its capabilities. You may also install <i>NoteWorthy Composer</i> on a second machine provided that it will never be in simultaneous use on more than one machine. Please protect your registration codes, as these are intended to be used only by you. </p>
+As a licensed user of <i>NoteWorthy Composer</i>, you are entitled to install <i>NoteWorthy Composer</i> on one machine and enjoy unrestricted use of its capabilities. You may also install <i>NoteWorthy Composer</i> on a second machine provided that it will never be in simultaneous use on more than one machine.</p>
 <p>
 <b><u>Disclaimer of Warranty </u></b></p>
 <p>
-The <i>NoteWorthy Composer</i> application and its accompanying support files are provided &quot;as is&quot; and no warranty of fitness for a particular use or purpose is offered. The entire and exclusive liability implied by this agreement shall be limited to the replacement of defective diskette(s). Liability shall not include or extend to any claim for or right to recover any other damages, including but not limited to loss of profit, data, or use of <i>NoteWorthy Composer</i> or other software, or special, incidental, or consequential damages or other similar claims, even if <b><i>NoteWorthy Software, Inc.</i></b> has been specifically advised of the possibility of such damages. In no event will <b><i>NoteWorthy Software</i></b>'s liability for any damages to you or any other party ever exceed the actual price paid for the license to use <i>NoteWorthy Composer</i>. </p>
+The <i>NoteWorthy Composer</i> application and its accompanying support files are provided &quot;as is&quot; and no warranty of fitness for a particular use or purpose is offered. The entire and exclusive liability implied by this agreement shall be limited to the replacement of defective disk media. Liability shall not include or extend to any claim for or right to recover any other damages, including but not limited to loss of profit, data, or use of <i>NoteWorthy Composer</i> or other software, or special, incidental, or consequential damages or other similar claims, even if <b><i>NoteWorthy Software, Inc.</i></b> has been specifically advised of the possibility of such damages. In no event will <b><i>NoteWorthy Software</i></b>'s liability for any damages to you or any other party ever exceed the actual price paid for the license to use <i>NoteWorthy Composer</i>. </p>
 <p>
 <b><i>NoteWorthy Software, Inc.</i></b><b> specifically disclaims all other warranties, expressed or implied, including but not limited to any implied warranty of merchantability or fitness for a particular purpose. </b></p>
 </body>
