--- a/HELP_ONDEALERSUPPORT.htm
+++ b/HELP_ONDEALERSUPPORT.htm
@@ -7,31 +7,29 @@
 <h2><i>NoteWorthy Composer</i> Authorized Dealers</h2>
 <hr>
 <p>
-The following are authorized dealers for <i>NoteWorthy Composer</i> in the specified region or country. Please contact them directly for details about ordering or on the status of an order that you placed with them. </p>
-<p>
-If you purchased <i>NoteWorthy Composer </i>from an authorized dealer, you should contact the dealer for support. If necessary, the dealer will contact us directly in resolving a complex support issue. </p>
+The following are authorized dealers for <i>NoteWorthy Composer</i> in the specified region or country. If you purchased <i>NoteWorthy Composer </i>from an authorized dealer, you should contact the dealer for support. If necessary, the dealer will contact us directly in resolving a complex support issue. </p>
 <p>
 <b><u>United Kingdom:</u></b> For UK registration and subsequent customer support, please contact: </p>
 <p>
-<b>PDSL, The Public Domain &amp; Shareware Library
+<b>PDSL, The Public Domain &amp; Shareware Library</b>
 <br>
-</b>PO Box 131
+PO Box 131
 <br>
-CROWBOROUGH, Sussex. TN6 1WS </p>
-<p>
+CROWBOROUGH, Sussex. TN6 1WS
+<br>
+http://www.pdsl.com, sales@pdsl.com
+<br>
 <b>Tel</b> 01892 663298
 <br>
 <b>Fax</b> 01892 667473
 <br>
-<b>BBS</b> 01892 661149 </p>
-<p>
-<b>Access/MC/VISA/Switch accepted </b> </p>
+<b>BBS</b> 01892 661149
+<br>
+Mastercard/VISA/Switch accepted </p>
 <p>
 <b>See Also </b> </p>
 <ul>
-<li><a href=HELP_ONORDERING.htm>How to Order</a></li>
 <li><a href=HELP_TROUBLESHOOT.htm>Common Questions</a></li>
-<li><a href=HELP_REGBENEFITS.htm>Benefits of Registering</a></li>
 </ul>
 </body>
 </html>
