--- a/HELP_ONKEYBOARD.htm
+++ b/HELP_ONKEYBOARD.htm
@@ -27,6 +27,9 @@ The following quick keys are generally available when editing a score: </p>
 <td align=center width="17%"><a href=MNU_ADDBARLINE.htm><b>Tab</b></a></td> <td width="83%">Adds a standard bar line at the insertion point</td>
 </tr>
 <tr>
+<td align=center width="17%"><a href=MNU_ADDBARLINE.htm><b>*</b></a></td> <td width="83%">Adds a standard bar line at the insertion point</td>
+</tr>
+<tr>
 <td align=center width="17%"><a href=MNU_NOTE1.htm><b>1</b></a></td> <td width="83%">Selects a whole note for the running note duration</td>
 </tr>
 <tr>
@@ -130,6 +133,12 @@ The following quick keys are generally available when editing a score: </p>
 </tr>
 <tr>
 <td align=center width="17%"><a href=MNU_EDITUNDO.htm><b>Alt+Backspace</b></a></td> <td width="83%">Performs an Undo operation</td>
+</tr>
+<tr>
+<td align=center width="17%"><a href=MNU_FIND.htm><b>Ctrl+F</b></a></td> <td width="83%">Find items on the staff</td>
+</tr>
+<tr>
+<td align=center width="17%"><a href=MNU_FINDNEXT.htm><b>F3</b></a></td> <td width="83%">Find the next item on the staff</td>
 </tr>
 <tr>
 <td align=center width="17%"><a href=MNU_EDITPASTE.htm><b>Ctrl+V</b></a></td> <td width="83%">Pastes the contents of the clipboard</td>
