--- a/HELP_ONSTARTINGUP.htm
+++ b/HELP_ONSTARTINGUP.htm
@@ -7,7 +7,7 @@
 <h2>Getting Started</h2>
 <hr>
 <p>
-After installing <i>NoteWorthy Composer</i> on your system, you are now ready to start working with music and playing back existing scores and MIDI files. The following topics help you to get started in this effort. If you have not registered, please check out the <a href=HELP_REGBENEFITS.htm>Benefits of Registering</a> section for details on how this evaluation copy is different from the licensed edition. </p>
+After installing <i>NoteWorthy Composer</i> on your system, you are now ready to start working with music and playing back existing scores and MIDI files. The following topics help you to get started in this effort.</p>
 <p>
 <a href=workwithsngfiles.htm>Working with Song Files:</a>
 <br>
