--- a/HELP_ONSUPPORT.htm
+++ b/HELP_ONSUPPORT.htm
@@ -9,9 +9,9 @@
 <p>
 If you have any questions regarding the use of <i>NoteWorthy Composer</i> that have not been answered in this help file or at our world-wide web site, feel free to contact us: </p>
 <p align=center>
-<b>World-wide Web: </b>http://NoteworthyComposer.com
+<b>World-wide Web: </b>http://NoteworthySoftware.com
 <br>
-<b>e-mail: </b>support@NoteWorthyComposer.com </p>
+<b>e-mail: </b>support@noteworthysoftware.com </p>
 <p>
 Alternately, if you do not have access to on-line e-mail, you may write to us at the following postal address: </p>
 <p align=center>
@@ -23,17 +23,15 @@ Fuquay-Varina, NC 27526-0995
 <br>
 USA </p>
 <p>
-<b>Note to registered users:</b> For best service, be sure to indicate that you are a registered user on any correspondence with <b><i>NoteWorthy Software</i></b>. Please <b>do not include</b> your registration codes, as we <b>do not need</b> this information in order to support you. Response time for e-mail queries will typically take less than 48 hours. </p>
+For best service, be sure to indicate that you are a registered user on any correspondence with <b><i>NoteWorthy Software</i></b>. Response time for e-mail queries will typically take less than 48 hours. </p>
 <p>
 If you purchased <i>NoteWorthy Composer </i>from an <a href=HELP_ONDEALERSUPPORT.htm>authorized dealer</a>, you should contact the dealer for support. If necessary, the dealer will contact us directly in resolving a complex support issue. </p>
 <p>
 <b>See Also </b></p>
 <ul>
-<li><a href=HELP_ONORDERING.htm>How to Order</a></li>
 <li><a href=HELP_ONDEALERSUPPORT.htm>Authorized Dealers</a></li>
 <li><a href=HELP_TROUBLESHOOT.htm>Common Questions</a></li>
 <li><a href=HELP_ONSTARTINGUP.htm>Getting Started</a></li>
-<li><a href=HELP_REGBENEFITS.htm>Benefits of Registering</a></li>
 </ul>
 </body>
 </html>
