--- a/HELP_ONWHATSNEW.htm
+++ b/HELP_ONWHATSNEW.htm
@@ -9,7 +9,36 @@
 <p>
 <i>NoteWorthy Composer</i> was first released in October of 1994. There have been many additions since the initial release. The following list is an overview summary of the major changes and additions, from the most recent update back to the original relase of the product.</p>
 <p>
-Note: If you want to quickly learn how to use the newest features of <i>NoteWorthy Composer</i>, check out this <a href=faq_useof170ftrs.htm>FAQ answer</a> in the <a href=HELP_TROUBLESHOOT.htm>FAQ</a> section.</p>
+Note: If you want to quickly learn how to use the newest features of <i>NoteWorthy Composer</i>, check out this <a href=faq_useofnewftrs.htm>FAQ answer</a> in the <a href=HELP_TROUBLESHOOT.htm>FAQ</a> section.</p>
+<p>
+<b><u>Version 1.75 (features since version 1.70 was released on CD):</u></b></p>
+<ul>
+<li>New: <i><b>Find</b></i> command on the Edit menu</li>
+<li>New: <b><i>Lines</i></b> property in Visual Staff Properties</li>
+<li>New: <b><i>Muted</i></b><i> </i>property for Notes</li>
+<li>New: <b><i>No Leger Lines</i></b> property for Notes</li>
+<li>New: Key signatures with no accidentals now shows the F Natural as a hidden item in the editor</li>
+<li>New: Select All command on the Edit menu
+<br>
+</li>
+<li>New: Transpose now preserves note intervals, so relative chord and note positioning are preserved</li>
+<li>New: Transpose now includes user control over new key signatures in ambiguous cases</li>
+<li>New: A new Audit Enharmonic Spelling command enables you to re-spell the notes in a staff, much like how the Transpose with 0 semi-tones used to work</li>
+<li>New: Staff, lyric, and note vertical positioning now support an extended range</li>
+<li>New: Bar lines properties can now be changed for an entire selection, making removal of system breaks much easier</li>
+<li>New: Standardized lyric syllable alignment is now an option from the Lyric Configuration tab</li>
+<li>New: Spacing of notes is now consistent, regardless of whether or not the note is adjacent to an invisible item</li>
+<li>New: A staff can now be moved up or down to a new position in the system using Ctrl+Shift+Page Up/Down</li>
+<li>New: Beams between a note in the staff and another note extending well above or below the staff now include a slant for improved appearance</li>
+<li>New: Hidden accidental display in editor for notes with incoming ties</li>
+<li>New: Printing now sends the song filename rather than song title to the print spooler</li>
+<li>New: Total song play back time is now displayed in addition to the current elapsed time during play back.</li>
+<li>New: When MIDI Port Usage is set to While Playing, a 4 second delay is now taken prior to stopping play back at the end of the song. This allows software synthesizers time to complete play back of the song.</li>
+<li>New: Crash protection has been added to the 32-bit edition of the program. The program now attempts to recover from events that used to cause a crash of the program, such as floating point and other math errors. This will often give the user an additional opportunity to salvage unsaved work prior to closing the program.</li>
+<li>New: The folder browsing mechanism in Tools | Options | Folders has been enhanced in the 32-bit edition of the program.</li>
+<li>New: The editor's scroll bars are now active and available, even while the song is playing.</li>
+<li>New: The editor's note chase that follows notes as they play can now be disabled. When disabled, you can continue to edit your song while it plays.</li>
+</ul>
 <p>
 <b><u>Version 1.70 (features since 1.55): </u></b></p>
 <ul>
