--- a/HELP_TROUBLESHOOT.htm
+++ b/HELP_TROUBLESHOOT.htm
@@ -11,7 +11,7 @@ All of the most common questions are included below. Simply click on the answer 
 <p>
 <b>Getting Started</b></p>
 <ol>
-<li>How do I start using the new 1.70 features? <a href=faq_useof170ftrs.htm>Answer</a></li>
+<li>How do I start using the most recent new features? <a href=faq_useofnewftrs.htm>Answer</a></li>
 <li>What is the best way to get started using NWC? <a href=faq_getstart.htm>Answer</a></li>
 <li>How do I create a MIDI File (*.mid)? <a href=faq_midifile.htm>Answer</a></li>
 <li>How do I enter more than one staff? <a href=faq_morestv.htm>Answer</a></li>
