--- a/MNU_ABOUT.htm
+++ b/MNU_ABOUT.htm
@@ -7,7 +7,7 @@
 <h2>About Command</h2>
 <hr>
 <p>
-This displays a dialog box showing the current version of <i>NoteWorthy Composer</i> and the pertinent copyright statement. If this is an unregistered version of <i>NoteWorthy Composer</i>, this will be indicated here. The registered version indicates the name of the registered, licensed owner of the product. </p>
+This displays a dialog box showing the current version of <i>NoteWorthy Composer</i> and the pertinent copyright statement. </p>
 <p>
 <b>See Also </b> </p>
 <ul>
