--- a/MNU_ADDDYNVARIANCE.htm
+++ b/MNU_ADDDYNVARIANCE.htm
@@ -13,9 +13,9 @@ It should be noted that the variance does not enforce specific rules about how t
 <p>
 The duration of the transitional dynamic variance is based on the position of the dynamic that follows the variance in the staff. Note that repeats and flow direction marks are ignored when determining the dynamic that follows the variance. If the variance does not have a dynamic on both sides of it in the staff, it does not alter play back dynamics in any way. </p>
 <p>
-Only the <b><i>Crescendo</i></b> and <b><i>Decrescendo </i></b>styles exhibit the variance behavior described above. The <b><i>Diminuendo</i></b>, <b><i>Rinforzando</i></b>, and <b><i>Sforzando</i></b> styles are ignored during MIDI play back. </p>
+Only the <b><i>Crescendo</i></b>, <b><i>Decrescendo</i></b>, and <b><i>Diminuendo </i></b>styles exhibit the variance behavior described above. The <b><i>Rinforzando</i></b> and <b><i>Sforzando</i></b> styles are ignored during MIDI play back. </p>
 <p>
-<b>See Also </b> </p>
+<b>See Also </b></p>
 <ul>
 <li><a href=SUBMNU_INSERT.htm>Insert Menu Commands</a></li>
 </ul>
