--- a/MNU_AUDITACCIDENTALS.htm
+++ b/MNU_AUDITACCIDENTALS.htm
@@ -11,7 +11,7 @@ This command can be used to remove any unnecessary accidentals assigned to notes
 <p>
 Note that this audit does not currently support the automatic placement of hint accidentals that many composers use to remind the player of the implied accidental associated with a note that is in key, but had been altered in the prior measure. </p>
 <p>
-This audit will not detect if the accidental is the enharmonic version of a note that appears in the key signature. If you want all note spelling to be converted to <i>in key</i> variants, you can use the <b>Transpose</b> command with an interval of 0. </p>
+This audit will not detect if the accidental is the enharmonic version of a note that appears in the key signature. If you want all note spelling to be converted to <i>in key</i> variants, you can use the <b>Audit Enharmonic Spelling</b> command. </p>
 <p>
 <b>See Also </b> </p>
 <ul>
