--- a/MNU_EDITLYRICS.htm
+++ b/MNU_EDITLYRICS.htm
@@ -11,11 +11,11 @@ Lyrics are added to a staff using this command. Each staff can be configured for
 <p>
 <b><u>Configuring Lyrics: </u></b></p>
 <p>
-The first property section, the <b><i>Configuration</i></b> tab, is used to define the number of lyric lines that should be associated with the active staff. A separate tab is then available for each of the lyric lines that have been defined for the staff. For your convenience, you can also change the lower boundary for the active staff from within the lyric configure page. </p>
+The first property section, the <b><i>Configuration</i></b> tab, is used to define the lyric <a href="JavaScript:IDHTip('IDH_DLGLYRICLINECNT')">Line Count</a> that should be associated with the active staff. A separate tab is then available for each of the lyric lines that have been defined for the staff. You can control how lyric syllables are aligned with notes on the staff using the <a href="JavaScript:IDHTip('IDH_DLGLYRICNOTEALIGNMENT')">Align Syllable Using</a> option. You can control where the lyrics are placed vertically in the staff using the <a href="JavaScript:IDHTip('IDH_DLGLYRICALIGNMENT')">Alignment</a> and <a href="JavaScript:IDHTip('IDH_DLGLYRICMARGIN')">Offset</a> placement options.</p>
 <p>
 <b><u>Authoring Lyrics: </u></b></p>
 <p>
-The remaining property sections, <b><i>Lyric 1</i></b> through <b><i>8</i></b>, are used to enter the actual lyrics. The font used to display and edit the lyrics is the same as is used in the editor. If the text is too small, use the <a href=MNU_VIEWZOOM.htm>zoom</a> tools to increase the size prior to running the lyric editor. </p>
+The remaining property sections, <b><i>Lyric 1</i></b> through <b><i>8</i></b>, are used to enter the actual lyrics. The font used to display and edit the lyrics is the same as that used when printing, but is always displayed at a size of 12 points.</p>
 <p>
 The lyrics that you add here are not assigned to the staff until you press the <b>OK</b> button. This is true for all of the lyric tabs. None of them are assigned to the staff until you exit the dialog by pressing the <b>OK</b> button. Note that the <b>OK</b> button can be reached by pressing the Tab key until the button receives the input focus. The <b>Enter</b> key is used for carriage returns within each lyric edit control, so it cannot be used to close the dialog box while entering lyric text. </p>
 <p>
@@ -47,7 +47,7 @@ When entering lyrics, you should separate each audible syllable with one of the 
 <p>
 Use of these separator conventions may become more important in later upgrades that may allow &quot;fake book&quot; arrangements. </p>
 <p>
-If you want to imbed one or more spaces into a single syllable (or utterance), you can use the underscore character (&quot;_&quot;) to accomplish this. Any underscores in a lyric are displayed as spaces in the score. Using the underscore, you can have multiple words or syllables associated with a single note event on the score. You can also add space onto the front or at the end of a syllable in order to even out the notation display in the score. You can also use <a href=MNU_NTNPROPERTIES.htm>notation properties</a> to force notes and rests to either attach to a lyric syllable, or specifically not attach to a lyric syllable.</p>
+If you want to include one or more spaces into a single syllable (or utterance), you can use the underscore character (&quot;_&quot;) to accomplish this. Any underscores in a lyric are displayed as spaces in the score. Using the underscore, you can have multiple words or syllables associated with a single note event on the score. You can also add space onto the front or at the end of a syllable in order to even out the notation display in the score. You can also use <a href=MNU_NTNPROPERTIES.htm>notation properties</a> to force notes and rests to either attach to a lyric syllable, or specifically not attach to a lyric syllable.</p>
 <p>
 <b><u>Lyric Alignment on the Staff: </u></b></p>
 <p>
