--- a/MNU_FILEINFO.htm
+++ b/MNU_FILEINFO.htm
@@ -21,7 +21,7 @@ This command provides the dialog used to define key parameters to your compositi
 <p>
 <b><u>Copyright Notice:
 <br>
-</u></b>You are entitled to copyright protection for any song works that you compose. You can specify two lines of copyright information within <i>NoteWorthy Composer</i> that will be displayed on the first page of the printed composition. A suggested phrasing is provided automatically. If you have registered, your name is also placed here automatically for new songs that are created. </p>
+</u></b>You are entitled to copyright protection for any song works that you compose. You can specify two lines of copyright information within <i>NoteWorthy Composer</i> that will be displayed on the first page of the printed composition. A suggested phrasing is provided automatically.</p>
 <p>
 <b><u>Comments:
 <br>
