--- a/MNU_FILEOPEN.htm
+++ b/MNU_FILEOPEN.htm
@@ -24,7 +24,7 @@ SMF files are commonly used to exchange music performance data between music seq
 <b>See Also </b></p>
 <ul>
 <li><a href=SUBMNU_FILE.htm>File Menu Commands</a></li>
-<li><a href=#MNU_FILENEW>Creating a New Composition</a></li>
+<li><a href=MNU_FILENEW.htm>Creating a New Composition</a></li>
 <li><a href=MNU_FILEHISTORY.htm>Reopening a Composition</a></li>
 </ul>
 </body>
