--- a/SUBMNU_TOOLS.htm
+++ b/SUBMNU_TOOLS.htm
@@ -22,6 +22,7 @@ This menu contains various tools for working with a score file. </p>
 <li><a href=MNU_FORCEACCIDENTALS.htm>Force Accidentals</a>: Forces all notes in active staff to be labeled with an accidental</li>
 <li><a href=MNU_AUDITBARLINES.htm>Audit Bar Lines</a>: Audits and replaces the bar line structure of the current staff</li>
 <li><a href=MNU_AUDITACCIDENTALS.htm>Audit Accidentals</a>: Audits and polishes the accidental assignments in the active staff</li>
+<li><a href=MNU_AUDITSPELLING.htm>Audit Enharmonic Spelling</a>: Audits and re-spells notes to match the current key signature</li>
 <li><a href=MNU_AUDITSTEMS.htm>Audit Note Stem</a>: Audits and polishes the note stem directions for the active staff</li>
 <li><a href=MNU_PREFERENCES.htm>Options</a>: Configure <i>NoteWorthy Composer</i> application preferences</li>
 </ul>
