--- a/TAB_RESTPROPERTIES.htm
+++ b/TAB_RESTPROPERTIES.htm
@@ -10,6 +10,8 @@
 Rest properties can be changed after the rest has been added to the staff. rest properties include:</p>
 <ul>
 <li><a href="JavaScript:IDHTip('IDH_DLGRESTVERTNPOFFSET')">Vertical Offset</a></li>
+<li><a href="JavaScript:IDHTip('IDH_NOTEPROPSLURDIR')">Slur Direction</a></li>
+<li><a href="JavaScript:IDHTip('IDH_ATTACHLYRICSYLLABLE')">Lyric Syllable</a></li>
 </ul>
 <p>
 <b>See Also </b></p>
