--- a/TAB_SNGNOTEPROPERTIES.htm
+++ b/TAB_SNGNOTEPROPERTIES.htm
@@ -11,8 +11,11 @@ Note properties are assigned to one or more selected notes after they have been 
 <ul>
 <li><a href="JavaScript:IDHTip('IDH_DLGEXTRAACCSIGNSLOTS')">Extra Accidental Spacing</a></li>
 <li><a href="JavaScript:IDHTip('IDH_DLGEXTRANOTEHEADSLOTS')">Extra Note Spacing</a></li>
+<li><a href="JavaScript:IDHTip('IDH_NOTEMUTED')">Muted</a></li>
+<li><a href="JavaScript:IDHTip('IDH_NOLEGERLINES')">No Leger Lines</a></li>
 <li><a href="JavaScript:IDHTip('IDH_NOTEPROPSLURDIR')">Slur Direction</a></li>
 <li><a href="JavaScript:IDHTip('IDH_NOTEPROPTIEDIR')">Tie Direction</a></li>
+<li><a href="JavaScript:IDHTip('IDH_ATTACHLYRICSYLLABLE')">Lyric Syllable</a></li>
 </ul>
 <p>
 <b>See Also </b></p>
