--- a/TAB_STAFFPROPVISUAL.htm
+++ b/TAB_STAFFPROPVISUAL.htm
@@ -11,6 +11,7 @@ Display properties for a staff include: </p>
 <ul>
 <li><a href="JavaScript:IDHTip('IDH_DLGSTAFFEDT5')">Uper Vertical Size</a></li>
 <li><a href="JavaScript:IDHTip('IDH_DLGSTAFFEDT6')">Lower Vertical Size</a></li>
+<li><a href="JavaScript:IDHTip('IDH_STAFFLINECOUNT')">Lines</a></li>
 <li><a href="JavaScript:IDHTip('IDH_DLGSTAFFEDT4')">Style</a></li>
 <li><a href="JavaScript:IDHTip('IDH_DLGSTAFFEDTLAYERING')">Layer with next staff</a></li>
 <li><a href="JavaScript:IDHTip('IDH_STAFFPROPCOLOR')">Color</a></li>
