--- a/faq_changkey.htm
+++ b/faq_changkey.htm
@@ -11,8 +11,7 @@ It is easy to change the key signature of a staff, as follows:</p>
 <ol>
 <li>Use <b>Tools: Force Accidentals</b> to assign an accidental to each note.</li>
 <li><b>Select</b> the key signature, and change it using <b>Ctrl+E</b> (Edit Selection). If no key exists, then use <b>Insert: Key Signature </b>(or <b>K</b>) &nbsp; to enter a key signature at the beginning of the staff.</li>
-<li>Select <b>Tools: Audit Accidentals</b> to update notes to the key.</li>
-<li>If necessary to change the enharmonic spelling of notes, select <b>Tools: Transpose </b>and specify an interval of &quot;0&quot;.</li>
+<li>Select <b>Tools: Audit Enharmonic Spelling</b> to update notes to the key.</li>
 </ol>
 </body>
 </html>
