--- a/faq_musicdict.htm
+++ b/faq_musicdict.htm
@@ -50,7 +50,7 @@ Dynamic Variances are terms or symbols indicating change from soft to loud or lo
 <td width="25%"><b>Decrescendo</b></td> <td width="15%"><b><i>decresc</i></b></td> <td width="35%">Gradually play softer</td>
 </tr>
 <tr>
-<td width="25%"><b>Diminuendo</b></td> <td width="15%"><b><i>dim.</i></b></td> <td width="35%">Play to diminish</td>
+<td width="25%"><b>Diminuendo</b></td> <td width="15%"><b><i>dim.</i></b></td> <td width="35%">Play to diminish (<i><b>decresc</b></i>)</td>
 </tr>
 <tr>
 <td width="25%"><b>Rinforzando</b></td> <td width="15%"><b><i>rfz</i></b></td> <td width="35%">Play to reinforce</td>
