--- a/index.htm
+++ b/index.htm
@@ -15,10 +15,6 @@ This section introduces the application, assists in installing and setting it up
 <br>
 You have just installed <i>NoteWorthy Composer</i>, and you are not sure where to go from here? This section can help. </p>
 <p>
-<a href=HELP_ONORDERING.htm>Ordering Information:</a>
-<br>
-If you have not licensed your copy of <i>NoteWorthy Composer</i>, and you want to do so, this section tells you how. </p>
-<p>
 <a href=HELP_ONWHATSNEW.htm>What's New:</a>
 <br>
 This section documents the development history of <i>NoteWorthy Composer</i> since its original introduction in October of 1994. It includes links to get started fast with all of the newest features.</p>
@@ -41,6 +37,6 @@ If you want or need support, we can help. This tells you where and how to ask fo
 <p align=center>
 <b>A product of </b><b><i>NoteWorthy Software, Inc.
 <br>
-</i></b><a href="http://NoteWorthyComposer.com">http://NoteWorthyComposer.com</a></p>
+</i></b><a href="http://www.noteworthysoftware.com">http://NoteworthySoftware.com</a></p>
 </body>
 </html>
