--- a/SUBMNU_EDIT.htm
+++ b/SUBMNU_EDIT.htm
@@ -18,9 +18,12 @@ The commands available from the edit menu include: </p>
 <li><a href=MNU_COPYSPECIAL.htm>Copy Special</a>: Copies the portion of the selection that fits on screen to the clipboard as a graphic</li>
 <li><a href=MNU_EDITPASTE.htm>Paste</a>: Pastes the contents of the clipboard at insertion point</li>
 <li><a href=MNU_EDITCLEAR.htm>Clear</a>: Clears the selection (no effect on clipboard)</li>
+<li><a href=MNU_EDITSELECTALL.htm>Select All</a>: Selects everything in the active staff</li>
 <li><a href=MNU_REMOVENOTE.htm>Remove Chord Note</a>: Remove the member of a chord immediately on the left of the insertion point</li>
 <li><a href=MNU_NOTEBEAM.htm>Beam</a>: Beams the note flags of the selected notes</li>
 <li><a href=MNU_NOTETRIPLET.htm>Triplet</a>: Turns the selected notes into a triplet</li>
+<li><a href=MNU_FIND.htm>Find</a>: Finds the next matching notation element using criteria that you specify</li>
+<li><a href=MNU_FINDNEXT.htm>Find Next</a>: Finds the next matching notation element using criteria specified in a prior Find operation</li>
 <li><a href=MNU_EDITGOTO.htm>Goto</a>: Moves insertion point to the measure you specify</li>
 <li><a href=MNU_EDITLYRICS.htm>Lyrics</a>: Opens the lyric editor dialog for this staff</li>
 <li><a href=MNU_OPENPROPERTIES.htm>Properties</a>: Open the propeties editor for the current selection</li>
