--- a/TAB_OPTIONSEDITOR.htm
+++ b/TAB_OPTIONSEDITOR.htm
@@ -15,6 +15,7 @@ The following options are available for controlling the operation of the editor:
 <li><a href="JavaScript:IDHTip('IDH_SMARTPROPERTIESINSERT')">Smart Properties Insert</a></li>
 <li><a href="JavaScript:IDHTip('IDH_DLGOPTDLGLTFONT')">Use light font in dialogs</a></li>
 <li><a href="JavaScript:IDHTip('IDH_DLGOPTDLGACTSTAFFFRAME')">Active staff frame</a></li>
+<li><a href="JavaScript:IDHTip('IDH_CHASEPLAYINGNOTES')">Chase playing notes</a></li>
 <li><a href="JavaScript:IDHTip('IDH_DLGOPTEDITOR8')">Undo Levels</a></li>
 </ul>
 <p>
